adjust bookmark reset

--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,1 @@
-{"device": "Clavinova Port 1", "music": "/Users/dirkleas/h4x/clav.toys/more clav files/Piano Bar", "bookmark": 3, "voices": {"CFX Concert Grand": [[0, 0, 1], [108, 0, 1]], "Fretless Bass": [[0, 0, 33], [8, 32, 20]]}}
+{"device": "Clavinova Port 1", "music": "/Users/dirkleas/h4x/clav.toys/PIANOFORCE MUSIC FILES/Piano Bar", "bookmark": 20, "voices": {"CFX Concert Grand": [[0, 0, 1], [108, 0, 1]], "Fretless Bass": [[0, 0, 33], [8, 32, 20]]}}
