--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,1 @@
-{"device": "Clavinova Port 1", "music": "/tmp/songs.unique/c1e5a655bbc558fa0930b8094134b351.mid", "bookmark": 1, "voices": {"CFX Concert Grand": [[0, 0, 1], [108, 0, 1]], "Fretless Bass": [[0, 0, 33], [8, 32, 20]]}, "catalog": "/tmp/songs.unique/catalog.json"}
+{"device": "Clavinova Port 1", "music": "/tmp/ronnell.json", "bookmark": 1, "voices": {"CFX Concert Grand": [[0, 0, 1], [108, 0, 1]], "Fretless Bass": [[0, 0, 33], [8, 32, 20]]}, "catalog": "/tmp/songs.unique/catalog.json"}
