--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,1 @@
-{"device": "Clavinova Port 1", "music": "/tmp/ronnell.json", "bookmark": 12, "voices": {"CFX Concert Grand": [[0, 0, 1], [108, 0, 1]], "Fretless Bass": [[0, 0, 33], [8, 32, 20]]}, "catalog": "/Users/dirkleas/h4x/clav.toys.unique"}
+{"device": "Clavinova Port 1", "music": "", "bookmark": 12, "voices": {"CFX Concert Grand": [[0, 0, 1], [108, 0, 1]], "Fretless Bass": [[0, 0, 33], [8, 32, 20]]}, "catalog": ""}
