swap win10toast for plyer due to warning message

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,4 @@ duckdb
 # fastapi
 # uvicorn[standard]
 sh; sys_platform == "darwin"
-win10toast; sys_platform == "win32"
+plyer; sys_platform == "win32"
