--- a/settings.json
+++ b/settings.json
@@ -1,3 +1,3 @@
 {"device": "Clavinova Port 1", "music": "", "bookmark": 12, 
-"voicing_default": "Clavinova CVP 809", "voicings": {"Clavinova CVP 809": {"CFX Concert Grand": [[0, 0, 1], [108, 0, 1]], "Fretless Bass": [[0, 0, 33], [8, 32, 20]]}}, 
+"voicing_default": "Clavinova CVP 809", "volume": 85, "voicings": {"Clavinova CVP 809": {"CFX Concert Grand": [[0, 0, 1], [108, 0, 1]], "Fretless Bass": [[0, 0, 33], [8, 32, 20]]}}, 
 "catalog": "", "root": "", "performanceEvents": "aftertouch channel_prefix cue_marker midi_port note_off note_on pitch_bend pitchwheel polytouch quarter_frame sequence_number smpte_offset song_select songpos sysex tune_request unknown_meta"}
